# pti-engine

./: .dockerignore  .gitignore  CLAUDE.md  DEMO.md  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.pipeline-email.toml  railway.pipeline-evening.toml  railway.pipeline.toml  railway.toml  start.sh  start_pipeline.sh  start_pipeline_evening.sh
alembic/: env.py
config/: public_export_policy.yaml
configs/: app.yaml
data_inputs/: fragrance_channels_reviewed_2026-05-10.csv
frontend/: Dockerfile  FRONTEND_NOTES.md  next.config.ts  package-lock.json  package.json
outputs/: build_weekly_report_result.json  ingest_social_content_result.json  market_dev.db  normalized.db  pti.db  pti_reddit_test.db  signals.db  test_pipeline_result.json  unified.db
perfume_trend_sdk/: local_dev.sqlite
reports/: phase0_postcheck.md  phase1_deploy_verification.md  phase1_fragrantica_activation.md  phase1b_access_unblock.md  phase2_deploy_verification.md  phase2_notes_brand.md  phase2b_data_bridge.md  phase3_candidates.md  phase3_production_activation.md  phase3b_validation.md  phase4a_review_pipeline.md  phase4b_promotion.md  phase4c_create_bucket.md  phase4c_deploy_verification.md  phase5_first_import.md  source_intake_yt-creator-expansion-02-agent-approved-136_2026-05-11.csv  source_intake_yt-creator-expansion-02-agent-approved-136_2026-05-11.md  youtube_candidate_add_2026-05-10.json  youtube_candidate_intake_2026-05-10.csv  youtube_candidate_intake_2026-05-10.md
scripts/: apply_temp_youtube_queries.py  approve_user.py  audit_ambiguous_entity_risk.py  import_kaggle_v1.py  (+55 more)
(+1010 files in other folders)
