[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfume_trend_sdk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "python-dotenv",
    "pytest",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "requests>=2.31.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "curl-cffi>=0.7",
    "youtube-transcript-api>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
